<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/fragment_login"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    >

    <ImageView
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:id="@+id/iv_logo"
        android:src="@drawable/ic_login_error"
        android:layout_width="120dp"
        android:layout_height="120dp"/>

    <androidx.cardview.widget.CardView
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Login_CardView_Style">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:inputType="textEmailAddress"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintVertical_bias="0.4"
                tools:text="User email"
                android:hint="@string/hint_user_e_mail"
                android:id="@+id/et_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_bias="0.3"
                app:layout_constraintBottom_toTopOf="@+id/et_password"/>

            <EditText
                tools:text="User password"
                android:inputType="numberPassword"
                android:id="@+id/et_password"
                android:hint="@string/hint_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_email"
                app:layout_constraintHorizontal_bias="0.5"/>

            <Button
                android:id="@+id/btn_login"
                android:text="@string/btn_log_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_password"
                />

            <TextView
                android:id="@+id/tv_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/btn_login"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/forgot_password"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:text="@string/dont_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_gravity="center"
        android:id="@+id/btn_sign_in"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:text="@string/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_gravity="center_horizontal"
        android:id="@+id/btn_sign_out"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:text="@string/sign_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>
